--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@sayem314/react-native-keep-awake": "^1.0.4",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-paper": "^4.11.2"
